# easylog-python-server

./: .cursorrules  .editorconfig  .gitignore  .prettierrc.json  AI Cursor.code-workspace  BACKUP_INSTRUCTIONS.md  README.md  ZLM_BALLOON_HEIGHTS_ANALYSIS.md  ZLM_SCORE_BEREKENINGEN_VERSLAG.md  agents  create_presentation_pdf.py  docker-compose.dev.yaml  docker-compose.yaml  install.sh  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  schema.prisma  score.md  turbo.json  zlm_copd_scoring.md
api/: .env.example
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test-dns  docker-compose.yaml  nginx.conf  package.json  pyproject.toml  schema.prisma
apps/api/.docker/: api.dockerfile  worker.dockerfile
apps/api/experiments/: .gitignore  graphiti.ipynb  rag.ipynb
apps/api/src/: jobs.py  logger.py  main.py  settings.py
apps/api/src/agents/: agent_loader.py  anthropic_agent.py  base_agent.py  models.py  multi_agent.py  openai_agent.py
apps/api/src/agents/implementations/: # Balloon Chart Widget - Developer Docum.md  AI TEST  Anthropic_2.py  Assistent JSON.json  ChatBRL.py  Claude Chat 1.py  EasyLogAgentJson.json  EasyLogAgentZLM.md  OPENAI Chat 1.py  OPENAI Chat 2.py  __init__.py  agent.json  anthropic_Ewout.py  anthropic_assistant.py  anthropic_crow.py  anthropic_crow96.py  anthropic_easylog_agent.old.py  anthropic_easylog_agent.py  anthropic_easylog_backup.py  anthropic_first.py  anthropic_health_agent.py  anthropic_muc.py  anthropic_muc_agent.py  anthropic_new.py  anthropic_trams.py  anthropic_trams_agent.py  anthropic_trams_org.py  anthropic_trams_org_agent.py  anthropic_wegen.py  anthropic_with_pdf copy.py  anthropic_with_pdf.py  debug_agent.py  debug_anthropic.py  debug_anthropic_agent.py  debug_assistant.py  debug_echo.py  debug_echo_agent.py  easylog_agent.py  gemini.py  gemini_agent.py  (+23 more)
apps/api/src/agents/tools/: base_tools.py  easylog_backend_tools.py  easylog_sql_tools.py  knowledge_graph_tools.py  parse_horizontal_lines.py  planning_tools.py
apps/api/src/agents/utils/: citation_formatter.py  decode_data_url_to_image.py  resize_image_to_byte_size.py
apps/api/src/api/: health.py  knowledge.py  messages.py  steps.py  threads.py
apps/api/src/lib/: adobe.py  gemini.py  graphiti.py  mistral.py  openai.py  supabase.py  weaviate.py
apps/api/src/models/: chart_widget.py  chart_widget.py.backup-current  charts.py  chat.py  health.py  image_widget.py  knowledge.py  message_create.py  message_response.py  messages.py  multiple_choice_widget.py  pagination.py  steps.py  stream_tool_call.py  threads.py
apps/api/src/security/: __init__.py  api_token.py  optional_http_bearer.py
apps/api/src/services/: message_service.py
apps/api/src/utils/: colors.py  function_to_anthropic_tool.py  function_to_openai_tool.py  image_to_base64.py  is_valid_uuid.py  media_detection.py  object_to_formatted_text.py  pydantic_to_anthropic_tool.py  pydantic_to_openai_tool.py  sqi_connect.py  truncate.py
apps/api/tests/api/: message_contents_rows.csv  messages_rows.csv  test_messages.py
apps/api/tests/sql_test/: sqi_connect.py
apps/api/tests/utils/: test_object_to_formatted_text.py
src/: main.py
(+719 files in other folders)
