[project]
name = "app"
version = "0.1.0"
description = "An API for interacting with agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-pagination>=0.12.32",
    "fastapi[standard]>=0.115.5",
    "openai>=1.61.0",
    "prisma>=0.15.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "anthropic>=0.42.0",
    "markdown>=3.7",
    "pypdf2>=3.0.1",
    "google-genai>=1.0.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "pdfservices-sdk>=4.1.0",
    "ruff>=0.9.6",
    "isort>=6.0.0",
]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

# [lint]
# Disable fix for unused imports (`F401`).

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "ANN", "B", "A"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
"tests/*" = ["ANN"]  # Ignore missing annotations in tests
