[project]
name = "app"
version = "0.1.0"
description = "An API for interacting with agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-pagination>=0.12.32",
    "fastapi[standard]>=0.115.5",
    "prisma>=0.15.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "markdown>=3.7",
    "pypdf2>=3.0.1",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "pdfservices-sdk>=4.1.0",
    "ruff>=0.9.6",
    "isort>=6.0.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.0",
    "supabase>=2.15.1",
    "pymysql>=1.1.1",
    "sshtunnel>=0.4.0",
    "python-dateutil>=2.9.0.post0",
    "openai>=1.65.1",
    "prefect>=3.2.12",
    "marvin>=2.3.8",
    "cairosvg>=2.7.1",
    "graphiti-core>=0.10.4",
    "mistralai>=1.7.0",
    "weaviate-client>=4.14.1",
    "python-slugify>=8.0.4",
    "apscheduler>=3.11.0",
]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
target-version = "py312"
select = ["F", "E", "W", "I", "N", "UP", "ANN", "B", "A"]
ignore = ["ANN401"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
"tests/*" = ["ANN"]  # Ignore missing annotations in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
